--- a/app/sass/blocks/main.sass
+++ b/app/sass/blocks/main.sass
@@ -13,7 +13,7 @@
 		max-width: calc(100% - 320px)
 		height: auto
 		display: block
-		z-index: 10000
+		z-index: 2
 	&-content
 		text-align: right
 		color: #fff
