--- a/app/sass/blocks/portfolio.sass
+++ b/app/sass/blocks/portfolio.sass
@@ -5,7 +5,6 @@
     color: $textColor
     &-item
         margin: 0 0 2em
-        min-height: 580px
     &-title
         text-transform: uppercase
         font-size: 2em
