--- a/app/sass/common/media.sass
+++ b/app/sass/common/media.sass
@@ -33,10 +33,6 @@
     width: 700px
   .review
     padding: 0 0 5em
-    &-item
-      min-height: 420px
-      &__info
-        min-height: 86px
   .pseudo
     &-macbook
       &:before
@@ -89,14 +85,8 @@
   .portfolio
     &__slider
       margin-bottom: 0
-    &-item
-      min-height: 420px
   .slick-dotted.slick-slider
     margin-bottom: 0
-  .review
-    &-item
-      &__info
-        min-height: 108px
   .contacts
     &__form
       flex-wrap: wrap
@@ -158,12 +148,11 @@
         top: -7%
   .contacts
     &__form
-      width: 100%
-  .portfolio
-    &-item
-      min-height: 250px
+      width: 90%
   .main
+    padding-bottom: 3.5em
     &-content
+      margin-left: calc(100% - 220px)
       & .container__col
         align-items: flex-start
       &__title
@@ -203,12 +192,14 @@
           &.is-active
             display: block
     &-macbook
-      top: 0%
-      right: 150%
+      top: 15%
+      left: -35%
+      min-width: 250px
+      position: absolute
       & img
         width: 240px
         height: 210px
     & .feedback
-      margin: 0 auto
+      margin: 4em auto 0
       &__link
         width: 16%
